cpq301-capstone/force-app/main/default/objects/Gearbox_Price_Entry__c/Gearbox_Price_Entry__c.object-meta.xml
<CustomObject>
    <label>Gearbox Price Entry</label>
    <nameField>
        <displayFormat>GBP-{0000}</displayFormat>
        <label>Gearbox Price Entry</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gearbox Price Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>