cpq301-capstone/force-app/main/default/objects/Gearbox_Price_Entry__c/fields/Power_Type__c.field-meta.xml
<CustomField>
    <fullName>Power_Type__c</fullName>
    <label>Power Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>80 Hz</fullName>
            </value>
            <value>
                <fullName>90 Hz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>