cpq301-capstone/force-app/main/default/objects/Gearbox_Price_Entry__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Gearbox Price Entries</relationshipLabel>
    <relationshipName>Gearbox_Price_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>