cpq301-capstone/force-app/main/default/objects/Gearbox_Price_Entry__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1.5</fullName>
            </value>
            <value>
                <fullName>2.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>